# Diffr

./: .gitignore  Cargo.toml  README.md
crates/diffr-archive/: Cargo.toml
crates/diffr-archive/src/: archiver.rs  lib.rs  retention.rs  retriever.rs
crates/diffr-cli/: Cargo.toml
crates/diffr-cli/src/: main.rs
crates/diffr-cli/src/commands/: archive.rs  cluster.rs  config.rs  drive.rs  history.rs  init.rs  mod.rs  status.rs  sync.rs
crates/diffr-core/: Cargo.toml
crates/diffr-core/src/: config.rs  error.rs
crates/diffr-core/src/models/: archive.rs  cluster.rs  drive.rs  file_entry.rs  mod.rs  sync_state.rs
crates/diffr-db/: Cargo.toml
crates/diffr-db/src/: lib.rs  migration.rs  ops.rs  schema.rs
crates/diffr-discovery/: Cargo.toml
crates/diffr-discovery/src/: lib.rs
crates/diffr-discovery/src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
crates/diffr-scan/: Cargo.toml
crates/diffr-scan/src/: cache.rs  hasher.rs  lib.rs  scanner.rs
crates/diffr-sync/: Cargo.toml
crates/diffr-sync/src/: conflict.rs  diff.rs  executor.rs  lib.rs  topology.rs
