[workspace]
members = [
    "crates/diffr-core",
    "crates/diffr-discovery",
    "crates/diffr-scan",
    "crates/diffr-db",
    "crates/diffr-sync",
    "crates/diffr-archive",
    "crates/diffr-cli",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }
xxhash-rust = { version = "0.8", features = ["xxh3"] }
sha2 = "0.10"
zstd = "0.13"
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
console = "0.15"
uuid = { version = "1", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2"
dirs = "6"
sysinfo = "0.32"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
tempfile = "3"
