[package]
name = "diffr-db"
version = "0.1.0"
edition = "2021"

[dependencies]
diffr-core = { path = "../diffr-core" }
rusqlite = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = "1"

[dev-dependencies]
tempfile = { workspace = true }
