[package]
name = "diffr-discovery"
version = "0.1.0"
edition = "2021"

[dependencies]
diffr-core = { path = "../diffr-core" }
serde = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }
sysinfo = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }

[target.'cfg(windows)'.dependencies]
wmi = "0.14"

[target.'cfg(target_os = "linux")'.dependencies]
serde_json = "1"

[target.'cfg(target_os = "macos")'.dependencies]
plist = "1"

[dev-dependencies]
tempfile = { workspace = true }
