[package]
name = "diffr-sync"
version = "0.1.0"
edition = "2021"

[dependencies]
diffr-core = { path = "../diffr-core" }
diffr-db = { path = "../diffr-db" }
diffr-scan = { path = "../diffr-scan" }
diffr-archive = { path = "../diffr-archive" }
uuid = { workspace = true }
chrono = { workspace = true }
indicatif = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
